[package]
name = "assistant-tool-executor"
version = "0.1.21"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "assistant_tool_executor"

[dependencies]
assistant-core = { path = "../core" }
assistant-skills = { path = "../skills" }
assistant-llm = { path = "../llm" }
assistant-storage = { path = "../storage" }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
