[package]
name = "assistant-transcription"
version = "0.1.36"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pluggable audio transcription providers (Whisper, Ollama, Deepgram)"

[dependencies]
assistant-core = { path = "../core" }
assistant-llm  = { path = "../llm" }
async-trait    = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
reqwest        = { workspace = true }
reqwest-middleware = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
