[package]
name = "assistant-web-ui"
version = "0.1.34"
edition.workspace = true
license.workspace = true
description = "Web-based trace analysis UI and A2A protocol server for the assistant"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
assistant-a2a-json-schema = { path = "../a2a-json-schema" }
assistant-core = { path = "../core" }
assistant-llm = { path = "../llm" }
assistant-provider-anthropic = { path = "../provider-anthropic" }
assistant-provider-ollama = { path = "../provider-ollama" }
assistant-provider-openai = { path = "../provider-openai" }
assistant-provider-moonshot = { path = "../provider-moonshot" }
assistant-runtime = { path = "../runtime" }
assistant-skills = { path = "../skills" }
assistant-storage = { path = "../storage" }
assistant-tool-executor = { path = "../tool-executor" }
axum = { version = "0.8", features = ["macros"] }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { workspace = true }
dirs = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
